# modest-movie-metadata

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  ModestMovieMetadata.ps1  README.md  metadata.yml  modestmoviemetadata.iss.in  modestmoviemetadata.spec  pyproject.toml  setup.cfg
src/: cli.py
src/modestmoviemetadata/: __init__.py  config.py  modestmoviemetadata.py  singleapplication.py
src/modestmoviemetadata/tools/: audiotools.py  database.py  filetools.py  imdbsqlite.py  logtools.py  movieinfo.py  narrowspinbox.py  utilities.py  viewutils.py
src/modestmoviemetadata/ui/: aboutdialog.py  appthreading.py  fancylineedit.py  mainwindow.py  narrowspinbox.py  qtsingleapplication.py  selectrecord.py
tools/: build_iss.py  build_version_file.py
