[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modestmoviemetadata"
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Damon Lynch", email = "damonlynch@gmail.com" }]
description = "Generate Jellyfin folder names using data from IMDb"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = ["QtPy >= 2.4.1", "PySide6 >= 6.6.0", "cinemagoer"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Development Status :: 4 - Beta",
  "Topic :: Utilities",
  "Typing :: Typed",
]


[project.urls]
"Homepage" = "https://github.com/damonlynch/modestmoviemetadata"
"Bug Tracker" = "https://github.com/damonlynch/modestmoviemetadata/issues"

[project.gui-scripts]
modestmoviemetadata = "modestmoviemetadata.modestmoviemetadata:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
builtins = ["ic"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
extend-select = [
  "E501",
  "UP",   # pyupgrade
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.5"]
