[project]
name = modestmoviemetadata
version =  attr:src.modestmoviemetadata.__version__
author = Damon Lynch
author_email = damonlynch@gmail.com
description = Generate Jellyfin folder names using data from IMDb
readme = "README.md"
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    DDevelopment Status :: 4 - Beta
    Topic :: Utilities
    Typing :: Typed
[project.urls]
"Homepage" = "https://github.com/damonlynch/modestmoviemetadata"
"Bug Tracker" = "https://github.com/damonlynch/modestmoviemetadata/issues"
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    QtPy
    PySide6
[options.entry_points]
gui_scripts  =
    modestmoviemetadata = modestmoviemetadata.modestmoviemetadata:main

[options.packages.find]
where = src
